# contextura

./: .gitignore  .smoke-probe-output.json  AGENT.md  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  Cargo.toml  DECISIONS.md  IMPLEMENTATION_PLAN.md  LICENSE  MACOS_APP_SETUP_GUIDE.md  NOTES.md  NOTES.txt  PLAN.md  PRODUCTION.md  README.md  SETUP.md  SPEC.md  TEST.md  TODO.md  contextura_status_report.md  repomix-instruction.md  repomix.config.json  skills-lock.json
.githooks/: pre-push
docs/: MISSION.md  PRD_script_guardrails_cache.md  ROADMAP.md  SETUP.md  SPEC.md  TECH-STACK.md  TEST.md
scripts/: install-git-hooks.sh  pre-push-lint.sh  pre-push.sh  smoke-wire-to-wire.sh
src/: help.html  index.html  (+4 more)
src-tauri/: Cargo.toml  build.rs  skills-lock.json  tauri.conf.json
src-tauri/binaries/: libggml-base.0.10.0.dylib  libggml-base.dylib  libggml-blas.0.10.0.dylib  libggml-blas.dylib  libggml-cpu.0.dylib  libggml-cpu.dylib  libggml-metal.0.10.0.dylib  libggml-metal.dylib  libggml-rpc.0.dylib  libggml-rpc.dylib  libggml.0.dylib  libggml.dylib  libllama.0.0.8869.dylib  libllama.dylib  libmtmd.0.dylib  libmtmd.dylib  llama-server-aarch64-apple-darwin  vision-helper  vision-helper-aarch64-apple-darwin
src-tauri/binaries/llama-b8869/: libggml-base.0.10.0.dylib  libggml-metal.0.10.0.dylib  libllama-common.0.dylib  libllama.0.0.8869.dylib  libllama.0.dylib  libmtmd.0.0.8869.dylib  libmtmd.0.dylib
src-tauri/capabilities/: default.json
src-tauri/src/: async_bridge.rs  capture.rs  capture_loop_driver.rs  cli.rs  context.rs  downloader.rs  guardrails.rs  hotkeys.rs  ipc.rs  lib.rs  main.rs  models.rs  motion.rs  ocr.rs  ocr_backend.rs  ocr_post_processor.rs  path_resolver.rs  pipeline.rs  runtime_coordinator.rs  runtime_executor.rs  scheduler.rs  script.rs  settings.rs  sidecar.rs  sidecar_runtime_adapter.rs  snapshot.rs  styling.rs  thermal.rs  translation.rs  tray.rs
(+28 files in other folders)
