[package]
name = "contextura"
version = "1.0.0"
edition = "2024"
description = "Real-time screen translation overlay for macOS — translates Japanese text on-screen using local AI models"
license = "MIT"
default-run = "contextura"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# App framework
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"

# macOS native APIs
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication", "NSScreen"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrency
crossbeam-channel = "0.5"
rayon = "1.10"

# Utilities
uuid = { version = "1", features = ["v4"] }
dirs = "6"
sha2 = "0.10"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP (model downloader)
reqwest = { version = "0.12", features = ["stream"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Crash reporting (opt-in)
sentry = "0.35"

# Async runtime (for reqwest)
tokio = { version = "1", features = ["rt", "macros"] }
image = "0.24"
screencapturekit = "1.5.4"

[lints.rust]
future-incompatible = "warn"
nonstandard_style = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
redundant_clone = "deny"
needless_collect = "warn"
large_enum_variant = "warn"
clone_on_copy = "deny"
# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
